DE252566-- Gap issues fixed

--- a/src/app/components/getting-reimbursed-page/getting-reimbursed/getting-reimbursed.component.scss
+++ b/src/app/components/getting-reimbursed-page/getting-reimbursed/getting-reimbursed.component.scss
@@ -83,7 +83,7 @@
       }
       .time--period {
         .filterchips {
-          width: 840px;
+          width: 830px;
           float: left;
           .horizontal-align {
             display: inline-block;
