--- a/src/app/components/getting-reimbursed-page/non-payments/non-payments.component.scss
+++ b/src/app/components/getting-reimbursed-page/non-payments/non-payments.component.scss
@@ -12,7 +12,7 @@
     border: 1px solid $blue;
     border-radius: 2px;
     float: right;
-    margin-left: 7px;
+    margin-right: 7px !important;
     cursor: pointer;
 
     .filter_title {
@@ -80,7 +80,7 @@
       font-family: 'UHCSans-SemiBold', Helvetica, Arial, sans-serif;
       color: $black-rock;
       margin-left: 10px;
-
+      width: 961px;
       .page-title {
         flex-basis: 100%;
         font-size: 36px;
@@ -89,7 +89,7 @@
       }
       .time--period {
         .filterchips {
-          width: 845px;
+          width: 830px;
           float: left;
           .horizontal-align {
             display: inline-block;
@@ -254,7 +254,7 @@
     }
     .time--period {
       .filterchips {
-        width: 845px;
+        width: 830px;
         float: left;
         .horizontal-align {
           display: inline-block;
