--- a/src/app/components/getting-reimbursed-page/payments/payments.component.scss
+++ b/src/app/components/getting-reimbursed-page/payments/payments.component.scss
@@ -14,7 +14,7 @@
     border-radius: 2px;
     float: right;
     cursor: pointer;
-    margin-right: 7px;
+    margin-right: 7px !important;
 
     .filter_title {
       color: $blue;
@@ -96,7 +96,7 @@
       }
       .time--period {
         .filterchips {
-          width: 845px;
+          width: 830px;
           float: left;
           .horizontal-align {
             display: inline-block;
